--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "sass": "^1.63.6",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
